syntax = "proto3";
option java_package = "com.grpc.demo.service.donation";
option java_multiple_files = true;

package donation;

message Empty {}

message Donation {
    int32 id = 1;
    string categoria = 2;
    string description = 3;
    int32 cantidad = 4;
    bool eliminado = 5;
}

message DonationList {
    repeated Donation donation = 1;
}

message Response {
    bool success = 1;
    string message = 2;
}

service DonationService {
    rpc CreateDonation(Donation) returns (Response);
    rpc UpdateDonation(Donation) returns (Response);
    rpc DeleteDonation(Donation) returns (Response);
    rpc ListDonations(Empty) returns (DonationList);
}
